--- a/.github/workflows/deploy-to-object-storage-s3.yml
+++ b/.github/workflows/deploy-to-object-storage-s3.yml
@@ -3,18 +3,29 @@ name: Deploy to NHN Cloud Object Storage (S3 API)
 on:
   push:
     branches:
-      - master
-  workflow_dispatch: # 수동 실행 가능
+      - main
+  workflow_dispatch:
+    inputs:
+      region:
+        description: 'Object Storage 리전 (KR1 장애 시 kr2/jp1 선택)'
+        required: false
+        default: 'kr1'
+        type: choice
+        options:
+          - kr1
+          - kr2
 
 env:
   NODE_VERSION: '18'
   BUCKET_NAME: 'photo-frontend' # NHN Cloud Object Storage 컨테이너명
   VITE_API_BASE_URL: '/api' # 프로덕션 API URL
-  AWS_REGION: 'kr1' # NHN Cloud 리전
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    env:
+      # push 시에는 기본 kr1, 수동 실행 시 선택한 리전 사용
+      AWS_REGION: ${{ github.event.inputs.region || 'kr1' }}
     
     steps:
       - name: Checkout code
@@ -52,9 +63,10 @@ jobs:
       
       - name: Upload to Object Storage (S3 API)
         run: |
-          # S3 sync로 파일 업로드
+          # S3 sync로 파일 업로드 (--delete: 버킷에만 있고 dist에 없는 파일 삭제 → 재배포 시 깔끔히 교체)
           aws s3 sync dist/ s3://${{ env.BUCKET_NAME }}/ \
-            --endpoint-url https://kr1-api-object-storage.nhncloudservice.com \
+            --endpoint-url https://${{ env.AWS_REGION }}-api-object-storage.nhncloudservice.com \
+            --delete \
             --acl public-read \
             --cache-control "public, max-age=31536000" \
             --exclude "index.html" \
@@ -62,14 +74,14 @@ jobs:
           
           # HTML 파일은 캐시 설정 다르게 (짧게)
           aws s3 cp dist/index.html s3://${{ env.BUCKET_NAME }}/index.html \
-            --endpoint-url https://kr1-api-object-storage.nhncloudservice.com \
+            --endpoint-url https://${{ env.AWS_REGION }}-api-object-storage.nhncloudservice.com \
             --acl public-read \
             --content-type "text/html" \
             --cache-control "public, max-age=300"
           
           if [ -f "dist/share-preview.html" ]; then
             aws s3 cp dist/share-preview.html s3://${{ env.BUCKET_NAME }}/share-preview.html \
-              --endpoint-url https://kr1-api-object-storage.nhncloudservice.com \
+              --endpoint-url https://${{ env.AWS_REGION }}-api-object-storage.nhncloudservice.com \
               --acl public-read \
               --content-type "text/html" \
               --cache-control "public, max-age=300"
@@ -81,7 +93,7 @@ jobs:
         run: |
           # JavaScript 파일
           aws s3 cp s3://${{ env.BUCKET_NAME }}/assets/ s3://${{ env.BUCKET_NAME }}/assets/ \
-            --endpoint-url https://kr1-api-object-storage.nhncloudservice.com \
+            --endpoint-url https://${{ env.AWS_REGION }}-api-object-storage.nhncloudservice.com \
             --recursive \
             --exclude "*" \
             --include "*.js" \
@@ -92,7 +104,7 @@ jobs:
           
           # CSS 파일
           aws s3 cp s3://${{ env.BUCKET_NAME }}/assets/ s3://${{ env.BUCKET_NAME }}/assets/ \
-            --endpoint-url https://kr1-api-object-storage.nhncloudservice.com \
+            --endpoint-url https://${{ env.AWS_REGION }}-api-object-storage.nhncloudservice.com \
             --recursive \
             --exclude "*" \
             --include "*.css" \
@@ -105,13 +117,13 @@ jobs:
         run: |
           echo "Listing uploaded files..."
           aws s3 ls s3://${{ env.BUCKET_NAME }}/ \
-            --endpoint-url https://kr1-api-object-storage.nhncloudservice.com \
+            --endpoint-url https://${{ env.AWS_REGION }}-api-object-storage.nhncloudservice.com \
             --recursive | head -20
           echo ""
           echo "Deployment completed successfully!"
           echo ""
           echo "Access URL:"
-          echo "https://kr1-api-object-storage.nhncloudservice.com/v1/AUTH_<TENANT_ID>/${{ env.BUCKET_NAME }}/index.html"
+          echo "https://${{ env.AWS_REGION }}-api-object-storage.nhncloudservice.com/v1/AUTH_<TENANT_ID>/${{ env.BUCKET_NAME }}/index.html"
           echo ""
           echo "Or via CDN (if configured):"
           echo "https://your-cdn-domain.com/"
