--- a/.github/workflows/deploy-to-object-storage-s3.yml
+++ b/.github/workflows/deploy-to-object-storage-s3.yml
@@ -56,11 +56,13 @@ jobs:
       
       # NHN Cloud는 AWS가 아니므로 configure-aws-credentials 사용 시
       # sts.kr1.amazonaws.com 조회로 ENOTFOUND 발생 → 환경 변수만 설정
+      # 서명(SigV4): S3 호환 스토리지는 리전을 us-east-1로 고정해야 SignatureDoesNotMatch 방지
+      # 실제 요청은 아래 --endpoint-url로 NHN 엔드포인트 사용
       - name: Configure S3 credentials for NHN Cloud
         run: |
           echo "AWS_ACCESS_KEY_ID=${{ secrets.NHN_S3_ACCESS_KEY }}" >> $GITHUB_ENV
           echo "AWS_SECRET_ACCESS_KEY=${{ secrets.NHN_S3_SECRET_KEY }}" >> $GITHUB_ENV
-          echo "AWS_DEFAULT_REGION=${{ env.AWS_REGION }}" >> $GITHUB_ENV
+          echo "AWS_DEFAULT_REGION=us-east-1" >> $GITHUB_ENV
       
       - name: Upload to Object Storage (S3 API)
         run: |
